Bug 122790 - Table background color isn't shown when opening table background tab
Summary: Table background color isn't shown when opening table background tab
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.3.2 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Table-Properties-Dialog
  Show dependency treegraph
 
Reported: 2019-01-17 16:22 UTC by Telesto
Modified: 2019-05-06 10:51 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (8.54 KB, application/vnd.oasis.opendocument.text)
2019-01-17 16:23 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-01-17 16:22:58 UTC
Description:
Table background color isn't show when opening table background tab

Steps to Reproduce:
1. Open the attached file
2. Cursor in A1
3. Table -> Properties -> Background
4. Select Table (instead of cell) -> Should be yellow but is set to NONE
5. Press OK -> Background color disappears

Actual Results:
Background color isn't show & disappears when pressing OK

Expected Results:
Should show the table background color


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: 6740443311268b7d918bf4f43134d64fb78a0109
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-15_23:37:04
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2019-01-17 16:23:11 UTC
Created attachment 148403 [details]
Example file
Comment 2 Telesto 2019-01-17 16:23:32 UTC
No repro with
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL
Comment 3 Telesto 2019-01-17 16:37:19 UTC
Same issue with row color
Comment 4 Dieter 2019-01-17 19:22:13 UTC
I confirm it with

Version: 6.1.4.2 (x64)
Build-ID: 9d0f32d1f0b509096fd65e0d4bec26ddd1938fd3
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: group threaded

Keywords: possibleRegression bibisectRequest (because of comment 2)
Comment 5 Telesto 2019-01-17 21:05:42 UTC
@Jim, I thought you might be interested in this issue...
Comment 6 BogdanB 2019-01-17 21:48:00 UTC
It's ok on
Versiune: 6.0.7.3
Identificator construire: dc89aa7a9eabfd848af146d5086077aeed2ae4a5
Fire CPU: 4; OS: Linux 4.15; Redare UI: implicit; VCL: gtk2; 
Setări regionale: ro-RO (ro_RO.UTF-8); Calc: group

But it's not ok on
Versiune: 6.1.3.2
Identificator construire: 86daf60bf00efa86ad547e59e09d6bb77c699acb
Fire CPU: 4; OS: Linux 4.15; Redare UI: implicit; VCL: gtk2; 
Setări regionale: ro-RO (ro_RO.UTF-8); Calc: group threaded
Comment 7 BogdanB 2019-01-17 22:07:10 UTC
 fa09800f546ec1959d3f0f4d97a023baf89d5574 is the first bad commit
commit fa09800f546ec1959d3f0f4d97a023baf89d5574
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Apr 9 09:17:14 2018 +0200

    source 41f1a38b9e8b5e0567bf642d3e14a549e82ee0d9
    
    source 41f1a38b9e8b5e0567bf642d3e14a549e82ee0d9

:040000 040000 a6d8d077b40b3be00eb0fd02157b3da79525d565 579fb37537933bbe703834c75420c1e661560f90 M	instdir
Comment 8 Telesto 2019-01-17 22:45:22 UTC
author	Jim Raykowski <raykowj@gmail.com>	2018-01-28 09:20:06 -0900
committer	Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>	2018-04-09 09:14:07 +0200
commit 41f1a38b9e8b5e0567bf642d3e14a549e82ee0d9 (patch)
tree c0210ebfb55bb70ce139e5134db89ba5edf82910
parent b9d709e84728270acb00c3952551f5c608260e62 (diff)
tdf#105225 A table properties background tab page

https://cgit.freedesktop.org/libreoffice/core/commit/?id=41f1a38b9e8b5e0567bf642d3e14a549e82ee0d9
Comment 9 Jim Raykowski 2019-01-17 23:03:28 UTC
I agree this is a regression. Thanks for letting me know.
Comment 10 Jim Raykowski 2019-01-24 10:19:39 UTC
Here is a patch that adds the same functionality to the new background tab page as old background tab page had for writer table use:

https://gerrit.libreoffice.org/#/c/66844/
Comment 11 Jim Raykowski 2019-02-19 20:40:24 UTC
If anyone has time to test the patch it would be greatly appreciated. I would feel better about merging it if I had confirmation that it seems to work. My testing of it says it does. I never miss anything... :-).
Comment 12 Buovjaga 2019-02-27 18:10:53 UTC
(In reply to Jim Raykowski from comment #10)
> Here is a patch that adds the same functionality to the new background tab
> page as old background tab page had for writer table use:
> 
> https://gerrit.libreoffice.org/#/c/66844/

I confirm this fixes the problem.
Comment 13 Jim Raykowski 2019-02-28 02:20:57 UTC
(In reply to Buovjaga from comment #12)
> (In reply to Jim Raykowski from comment #10)
> > Here is a patch that adds the same functionality to the new background tab
> > page as old background tab page had for writer table use:
> > 
> > https://gerrit.libreoffice.org/#/c/66844/
> 
> I confirm this fixes the problem.

Buovjaga, thank you for testing. I have to fix a merge conflict that appeared today then I will get it in.
Comment 14 Commit Notification 2019-03-02 02:42:55 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/222b5b5b9b0d0419e30961261c63ff8585550b81%5E%21

tdf#122790 Improve background tab page for writer tables

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Xisco Faulí 2019-03-13 12:24:23 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 8aa579830b20072af8d6e149d6b279362fe98b91
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Jim Raykowski, thanks for fixing this issue!!

Cherry-picked to 6-2: https://gerrit.libreoffice.org/#/c/69168/
Comment 16 Commit Notification 2019-03-19 12:47:21 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/95355f66fdeddb4146f3ee14db899c70b09e54e7%5E%21

tdf#122790 Improve background tab page for writer tables

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.