tdf#122790 Improve background tab page for writer tables

This patch improves the new background tab page use for setting Writer
table cell, row, and table backgrounds. Now cell, row, and table
backgrounds fill tab page according to the fill style of each and can
all be set in the same opening of a Table Properties dialog. This patch
also makes the Reset reset background settings to initial settings of
dialog opening.

Change-Id: I567ef9229232f02d98b45a81309e920dca854bed
Reviewed-on: https://gerrit.libreoffice.org/66844
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit 222b5b5b9b0d0419e30961261c63ff8585550b81)