cui/source/inc/cuitabarea.hxx
@@ -254,6 +254,9 @@ protected:
 
     void SetOptimalSize(weld::DialogController* pController);
 
+    void SelectFillType( weld::ToggleButton& rButton, const SfxItemSet* _pSet = nullptr );
+    SfxTabPage* GetFillTabPage() { return m_pFillTabPage; }
+
 private:
     DECL_LINK(SelectFillTypeHdl_Impl, weld::ToggleButton&, void);
 
@@ -761,6 +764,8 @@ public:
 
 
     void    SetColorChgd( ChangeType* pIn ) { pnColorListState = pIn; }
+
+    void    SetCtlPreviewOld( SfxItemSet& rAttrs ) { m_aCtlPreviewOld.SetAttributes( rAttrs ); }
 
     virtual void FillUserData() override;
 };
